<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyLoginApp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_in_was_successful">signinwassuccessful</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="please_enter_your_email">Please enter your eMail:</string>
</resources>