<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:background="#A6B1AEAE"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="NotSibling,TextContrastCheck"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:background="#A6B1AEAE"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="NotSibling,TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#38EFEF"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="#607D8B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_confirm"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:onClick="forgottenPasswort"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/others"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:layout_above="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicons"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google">
        </ImageView>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb">
        </ImageView>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter">
        </ImageView>
    </LinearLayout>
</RelativeLayout>